[package]
name = "unity-yaml"
version = "0.0.1" # remember to update html_root_url
authors = ["linchunjie <linyichie@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Unity YAML parser"
repository = "https://github.com/ilinchunjie/unity-yaml"
readme = "README.md"
edition = "2021"

[dependencies]
linked-hash-map = { version = "0.5.6" }

[dev-dependencies]
quickcheck = { version = "1.0.3" }
